agrego header a todas las pags

--- a/pages/areas.html
+++ b/pages/areas.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Areas</title>
 </head>
+
 <body>
+
+        <!----------------INICIO HEADER-------------->
+<header>
+    <picture class="header__logo">
+        <img class="header__img" src="../images/favicon.png" alt="Imagen logo">
+    </picture>
+
+    <nav class="navigation">
+        <ul class="menu">
+            <li class="menu__item"> <a class="menu__link" href="../index.html">Inicio</a></li>
+            <li class="menu__item"> <a class="menu__link" href="./quienesSomos.html" > Quiénes Somos</a></li>
+            <li class="menu__item"> <a class="menu__link" href="./profesionales.html" > Profesionales </a></li>
+            <li class="menu__item"> <a class="menu__link" href="./areas.html" > Áreas </a></li>
+            <li class="menu__item"> <a class="menu__link" href="./contacto.html"> Contacto </a></li> 
+        </ul>
+
+    </nav>
+
+</header>
+
+<!--------------FIN HEADER------------------->   
     
 </body>
 </html>
