agrego media querys

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,5 +31,52 @@
 
 <!--------------FIN HEADER------------------->  
 
+
+<form class="formContacto">
+    <fieldset >
+        <legend>Datos de Contacto</legend>
+        <br>
+        <label for="nombre">Nombre</label>
+        <br />
+        <input id="nombre" type="text" /> 
+        <br />
+        <label for="apellido">Apellido</label>
+        <br />
+        <input id="apellido" type="text" />
+        <br />
+        <label for="email">e-mail</label>
+        <br />
+        <input id="email" type="email" />
+        <br />
+        <label for="telefono">Teléfono de contacto</label>
+        <br />
+        <input id="telefono" type="number" />
+        <br />  
+        <textarea placeholder="Consulta"></textarea>
+        <br />
+        <label for ="Newsletter" > ¿Desea recibir nuestro Newsletter? </label>
+        <input id="Newsletter" type="checkbox">
+        <br>
+        <input type="submit" />
+    </fieldset>
+</article>
+</form>
+
+
+<!-------------------FOOTER------------------->
+<footer class="footer">
+    <p>Seguinos en nuestras redes sociales</p>
+    <a href="https://www.linkedin.com" target="_blank">
+        <img src="../images/linkedin.png" alt="logo linkedin" width="20px" height="20px">
+    </a>
+      
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="../images/facebook.jpg" alt="logo facebook" width="20px" height="20px">  
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="../images/twitter.jpg" alt="logo twitter" width="20px" height="20px">
+    </a>
+</footer>
+
 </body>
 </html>
