--- a/pages/profesionales.html
+++ b/pages/profesionales.html
@@ -85,7 +85,9 @@
 
 </main>
 
-<footer>
+
+<!-------------------FOOTER------------------->
+<footer class="footer">
     <p>Seguinos en nuestras redes sociales</p>
     <a href="https://www.linkedin.com" target="_blank">
         <img src="../images/linkedin.png" alt="logo linkedin" width="20px" height="20px">
@@ -98,7 +100,7 @@
         <img src="../images/twitter.jpg" alt="logo twitter" width="20px" height="20px">
     </a>
 </footer>
-<!-------------------FIN MAIN------------------->
+
 
 
 
