--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -31,5 +31,20 @@
 
 <!--------------FIN HEADER------------------->  
 
+
+<!-------------------FOOTER------------------->
+<footer class="footer">
+    <p>Seguinos en nuestras redes sociales</p>
+    <a href="https://www.linkedin.com" target="_blank">
+        <img src="../images/linkedin.png" alt="logo linkedin" width="20px" height="20px">
+    </a>
+      
+    <a href="https://www.facebook.com" target="_blank">
+        <img src="../images/facebook.jpg" alt="logo facebook" width="20px" height="20px">  
+    </a>
+    <a href="https://www.twitter.com" target="_blank">
+        <img src="../images/twitter.jpg" alt="logo twitter" width="20px" height="20px">
+    </a>
+</footer>
 </body>
 </html>
