agrego carpeta de imagenes areas

--- a/pages/areas.html
+++ b/pages/areas.html
@@ -32,18 +32,41 @@
 
 <!--------------FIN HEADER------------------->   
 
+<section class="areas">
+    <div class="div__area">
+            <p>DERECHO LABORAL</p>
+            <img class="areas__img" src="../images/areas/laboral.jpg" alt="derecho laboral">
+    </div>
+    
+    <div class="div__area">
+        <p>DERECHO DE FAMILIA</p>
+        <img class="areas__img" src="../images/areas/familia.jpg" alt="derecho laboral">
+    </div>
+
+    <div class="div__area">
+        <p>DERECHO SUCESORIO</p>
+        <img class="areas__img" src="../images/areas/sucesorio.jpg" alt="derecho laboral">    
+    </div>
+
+</section>
+
+
+
+
+
 <!-------------------FOOTER------------------->
 <footer class="footer">
-    <p>Seguinos en nuestras redes sociales</p>
+    <br> 
+    <p>Seguinos en nuestras redes sociales</p> <br>
     <a href="https://www.linkedin.com" target="_blank">
-        <img src="../images/linkedin.png" alt="logo linkedin" width="20px" height="20px">
+        <img src="../images/linkedin.png" alt="logo linkedin" width="40px" height="40px">
     </a>
       
     <a href="https://www.facebook.com" target="_blank">
-        <img src="../images/facebook.jpg" alt="logo facebook" width="20px" height="20px">  
+        <img src="../images/facebook.jpg" alt="logo facebook" width="40px" height="40px">  
     </a>
     <a href="https://www.twitter.com" target="_blank">
-        <img src="../images/twitter.jpg" alt="logo twitter" width="20px" height="20px">
+        <img src="../images/twitter.jpg" alt="logo twitter" width="40px" height="40px">
     </a>
 </footer>
 
