--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,16 +65,17 @@
 
 <!-------------------FOOTER------------------->
 <footer class="footer">
-    <p>Seguinos en nuestras redes sociales</p>
+    <br> 
+    <p>Seguinos en nuestras redes sociales</p> <br>
     <a href="https://www.linkedin.com" target="_blank">
-        <img src="../images/linkedin.png" alt="logo linkedin" width="20px" height="20px">
+        <img src="../images/linkedin.png" alt="logo linkedin" width="40px" height="40px">
     </a>
       
     <a href="https://www.facebook.com" target="_blank">
-        <img src="../images/facebook.jpg" alt="logo facebook" width="20px" height="20px">  
+        <img src="../images/facebook.jpg" alt="logo facebook" width="40px" height="40px">  
     </a>
     <a href="https://www.twitter.com" target="_blank">
-        <img src="../images/twitter.jpg" alt="logo twitter" width="20px" height="20px">
+        <img src="../images/twitter.jpg" alt="logo twitter" width="40px" height="40px">
     </a>
 </footer>
 
