--- a/pages/areas.html
+++ b/pages/areas.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/icono.jpg">
     <link rel="stylesheet" href="../styles/styles.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Areas</title>
 </head>
 
@@ -32,7 +34,7 @@
 
 <!--------------FIN HEADER------------------->   
 
-<section class="areas">
+<!--<section class="areas">
     <div class="div__area">
             <p>DERECHO LABORAL</p>
             <img class="areas__img" src="../images/areas/laboral.jpg" alt="derecho laboral">
@@ -48,9 +50,46 @@
         <img class="areas__img" src="../images/areas/sucesorio.jpg" alt="derecho laboral">    
     </div>
 
-</section>
+</section>-->
 
-
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../images/areas/laboral.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Derecho laboral</h5>
+          <p>Despidos - Accidentes de trabajo - ART </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/areas/familia.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Derecho de familia</h5>
+          <p>Divorcios - Alimentos - Régimen de visitas - Filiación</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/areas/sucesorio.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Derecho sucesorio</h5>
+          <p>Sucesiones - Testamentos - Declaratoria de Herederos</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
 
@@ -69,6 +108,7 @@
         <img src="../images/twitter.jpg" alt="logo twitter" width="40px" height="40px">
     </a>
 </footer>
-
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
